--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ repository = "https://github.com/gngpp/v6p"
 [dependencies]
 cidr = "0.2"
 getopts = "0.2"
-hyper = { version = "1.0.1", features = ["http1","http2", "server"] }
+hyper = { version = "1.0.1", features = ["http1", "server"] }
 hyper-util = { version = "0.1.1", features = ["full"] }
 http-body-util = "0.1"
 tokio = { version = "1.34.0", features = ["net", "rt-multi-thread", "macros", "io-util"] }
