--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ bytes = "1.5.0"
 pin-project-lite = "0.2.13"
 http = "1.0.0"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+sysctl = "0.5.4"
+nix = { version = "0.27.1", features = ["user"] }
+
 [profile.release]
 strip = true
 lto = true
