--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,8 @@ rpmalloc = ["dep:rpmalloc"]
 mimalloc = ["dep:mimalloc"]
 
 [profile.release]
-strip = true
 lto = true
-opt-level = "z"
+opt-level = 'z'
 codegen-units = 1
+strip = true
+panic = "abort"
