--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ sysctl = "0.5.5"
 nix = { version = "0.27.1", features = ["user"] }
 
 [features]
-default = ["mimalloc"]
+default = []
 # Enable jemalloc for binaries
 jemalloc = ["jemallocator"]
 # Enable bundled tcmalloc
