--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,9 +42,9 @@ jobs:
       - name: Build package
         shell: bash
         run: |
-          docker run --rm -it -v $(dirname "$pwd"):/build -w /build ghcr.io/gngpp/cargo-zigbuild -c "os=linux scripts/build.sh"
-          docker run --rm -it -v $(dirname "$pwd"):/build -w /build ghcr.io/gngpp/cargo-zigbuild -c "os=macos scripts/build.sh"
-          docker run --rm -it -v $(dirname "$pwd"):/build -w /build ghcr.io/gngpp/cargo-zigbuild -c "os=windows scripts/build.sh"
+          docker run --rm -t -v $(pwd):/build -w /build ghcr.io/gngpp/cargo-zigbuild -c "os=linux ./build.sh"
+          docker run --rm -t -v $(pwd):/build -w /build ghcr.io/gngpp/cargo-zigbuild -c "os=macos ./build.sh"
+          docker run --rm -t -v $(pwd):/build -w /build ghcr.io/gngpp/cargo-zigbuild -c "os=windows ./build.sh"
           
       - name: Upload binaries to GitHub Release
         uses: softprops/action-gh-release@v1
@@ -52,6 +52,6 @@ jobs:
         with:
           token: ${{ secrets.CR_PAT }}
           files: |
-            uploads/*
+            bin/*
           prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') }}
           generate_release_notes: true
