--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ rpmalloc = { version = "0.2.2", optional = true }
 jemallocator = { package = "tikv-jemallocator", version = "0.5.4", optional = true }
 mimalloc = { version = "0.1.39", default-features = false, optional = true }
 thiserror = "1.0.52"
-self_update = "0.39.0"
+self_update = { version = "0.39.0", default-features = false, features = ["archive-tar", "compression-flate2"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 sysctl = "0.5.5"
