--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ http = "1.0.0"
 clap = { version = "4.4.3", features = ["derive", "env"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+self_update = { version = "0.39.0", default-features = false, features = ["rustls", "archive-tar", "compression-flate2"]  }
 
 # allocator
 tcmalloc = { version = "0.3.0", optional = true }
@@ -31,7 +32,6 @@ rpmalloc = { version = "0.2.2", optional = true }
 jemallocator = { package = "tikv-jemallocator", version = "0.5.4", optional = true }
 mimalloc = { version = "0.1.39", default-features = false, optional = true }
 thiserror = "1.0.52"
-self_update = { version = "0.39.0", default-features = false, features = ["archive-tar", "compression-flate2"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 sysctl = "0.5.5"
