--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ repository = "https://github.com/gngpp/vproxy"
 
 
 [dependencies]
+base64 = "0.21.6"
 cidr = "0.2.2"
+thiserror = "1.0.56"
 hyper = { version = "1.1.0", features = ["http1", "server"] }
 hyper-util = { version = "0.1.2", features = ["full"] }
 http-body-util = "0.1"
@@ -31,7 +33,6 @@ snmalloc-rs = { version = "0.3.4", optional = true }
 rpmalloc = { version = "0.2.2", optional = true }
 jemallocator = { package = "tikv-jemallocator", version = "0.5.4", optional = true }
 mimalloc = { version = "0.1.39", default-features = false, optional = true }
-thiserror = "1.0.52"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 sysctl = "0.5.5"
