--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "vproxy"
 version = "0.1.4"
 edition = "2021"
 authors = ["gngppz@gmail.com"]
-description = "Random IPv6 request proxy (Fallback Ipv4)"
+description = "Random IPv6 request proxy"
 readme = "README.md"
 license = "MIT"
 homepage = "https://github.com/gngpp/vproxy"
