feat(route): Migrate ip route command to rtnetlink (#46)
* deps(anyhow): remove it

* refactor(route): refactor it

* feat(route): Migrate `ip route` command to rtnetlink

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,9 @@ mimalloc = { version = "0.1.39", default-features = false, optional = true }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 sysctl = "0.5.5"
+rtnetlink = "0.14"
+netlink-packet-route = "0.19"
+futures = "0.3.30"
 
 [target.'cfg(target_family = "unix")'.dependencies]
 daemonize = "0.5.0"
