--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "vproxy"
-version = "0.3.3"
+version = "0.3.5"
 edition = "2021"
 authors = ["gngppz@gmail.com"]
 description = "An easy and powerful Rust HTTP/Socks5 Proxy"
 readme = "README.md"
 license = "MIT"
-homepage = "https://github.com/gngpp/vproxy"
-repository = "https://github.com/gngpp/vproxy"
+homepage = "https://github.com/0x676e67/vproxy"
+repository = "https://github.com/0x676e67/vproxy"
 rust-version = "1.76"
 
 [dependencies]
