--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,9 +42,9 @@ jobs:
       - name: Build package
         shell: bash
         run: |
-          docker run --rm -t -v $(pwd):/build -w /build -e tag=$tag ghcr.io/0x676e67/cargo-zigbuild -c "os=linux ./build.sh"
-          docker run --rm -t -v $(pwd):/build -w /build -e tag=$tag ghcr.io/0x676e67/cargo-zigbuild -c "os=macos ./build.sh"
-          docker run --rm -t -v $(pwd):/build -w /build -e tag=$tag ghcr.io/0x676e67/cargo-zigbuild -c "os=windows ./build.sh"
+          docker run --rm -t -v $(pwd):/build -w /build -e tag=$tag ghcr.io/0x676e67/cargo-zigbuild -c "os=linux ./.github/build.sh"
+          docker run --rm -t -v $(pwd):/build -w /build -e tag=$tag ghcr.io/0x676e67/cargo-zigbuild -c "os=macos ./.github/build.sh"
+          docker run --rm -t -v $(pwd):/build -w /build -e tag=$tag ghcr.io/0x676e67/cargo-zigbuild -c "os=windows ./.github/build.sh"
           
       - name: Upload binaries to GitHub Release
         uses: softprops/action-gh-release@v1
@@ -55,3 +55,4 @@ jobs:
             bin/*
           prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') }}
           generate_release_notes: true
+
